# replay-api

./: .gitignore  Cargo.toml  flake.nix
migrations/: 20230218203508_create_users.down.sql  20230218203508_create_users.sql  20230218203508_create_users.up.sql
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/api/extractors/: jwt.rs  mod.rs
src/api/routes/auth/: login.rs  logout.rs  me.rs  mod.rs  refresh.rs  register.rs
src/api/routes/users/: me.rs  mod.rs
src/infra/: app.rs  config.rs  cors.rs  db.rs  id.rs  mod.rs  redis.rs  response.rs  server.rs  service.rs  tracing.rs
src/modules/: error.rs  mod.rs
src/modules/auth/: mod.rs  resolver.rs
src/modules/auth/models/: mod.rs
src/modules/auth/services/: login.rs  me.rs  mod.rs  refresh.rs  register.rs
src/modules/auth/store/: bitbucket.rs  github.rs  gitlab.rs  mod.rs  proxy.rs  traits.rs
src/modules/jwt/: mod.rs  resolver.rs
src/modules/jwt/models/: mod.rs
src/modules/jwt/services/: blacklist_refresh_token.rs  decode_access_token.rs  decode_refresh_token.rs  encode_tokens.rs  mod.rs  refresh_tokens.rs
src/modules/jwt/store/: mod.rs
src/modules/users/: mod.rs  resolver.rs
src/modules/users/domain/: mod.rs
src/modules/users/domain/models/: mod.rs
src/modules/users/domain/values/: mod.rs
src/modules/users/model/: mod.rs
src/modules/users/services/: get_authd_user.rs  mod.rs
src/modules/users/store/: mod.rs
