[package]
name = "replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
auto_impl = "1.0.1"
axum = { version = "0.6.7", features = ["headers"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
hyper = "0.14.24"
jsonwebtoken = "8.2.0"
once_cell = "1.17.1"
r2d2 = "0.8.10"
redis = { version = "0.22.3", features = ["r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
validator = { version = "0.16.0", features = ["derive"] }
